2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* general/__isequal__.m: Check for isnumeric|islogical.
	* testfun/assert.m: Ditto.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/perms.m: Avoid recursion. Simplify assignments. Allow empty
	vectors.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/erfinv.m: Remove.
	* specfun/module.mk: Update.

2009-11-18  Ben Abbott <bpabbott@mac.com>

	* plot/orient.m: Flip papersize and paperposition when orientation
	changes. Add support for 'tall' option. Add tests.

2009-11-18  Jaroslav Hajek  <highegg@gmail.com>

	* io/textread.m: strncmp->strcmpi.

2009-11-14  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/expm.m: Fix typo.

2009-11-11  John W. Eaton  <jwe@octave.org>

	* miscellaneous/intwarning.m: Doc fix.

2009-11-11  John W. Eaton  <jwe@octave.org>

	* plot/stairs.m (__stairs__): Correct nargin check.  New demos.
	From Jakub Kasse <jakub.kasse@tul.cz>.

2009-11-11  John W. Eaton  <jwe@octave.org>

	* help/help.m (help): Return immediately after calling do_contents.
	(do_contents): Find all matching directories, not just the first.
	Call get_help_text_from_file to avoid looking in path.
	Handle printing here.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* Makefile.am, audio/module.mk, deprecated/module.mk,
	elfun/module.mk, general/module.mk, geometry/module.mk,
	help/module.mk, image/module.mk, io/module.mk,
	linear-algebra/module.mk, miscellaneous/module.mk,
	optimization/module.mk, path/module.mk, pkg/module.mk,
	plot/module.mk, polynomial/module.mk, set/module.mk,
	signal/module.mk, sparse/Makefile.in, specfun/Makefile.in,
	special-matrix/Makefile.in, startup/Makefile.in,
	statistics/Makefile.in, statistics/base/module.mk,
	statistics/distributions/module.mk, statistics/models/module.mk,
	statistics/tests/module.mk, strings/module.mk, testfun/module.mk,
	time/module.mk: New files.
	* Makefile.in, move-if-change, configure.ac, audio/Makefile.in,